<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Caronas</string>
    <string name="action_settings">Settings</string>
    <string name="login_txt_email">EMAIL</string>
    <string name="login_txt_senha">SENHA</string>
    <string name="login_btn_login">Login</string>
    <string name="login_btn_cadastro">Cadastro</string>
    <string name="cadastro_txt_nome">Nome:</string>
    <string name="cadastro_txt_nasc">Data de nascimento:</string>
    <string name="cadastro_txt_ingresso">Ano de ingresso na UFABC:</string>
    <string name="cadastro_txt_ra">Registro acadêmico(RA):</string>
    <string name="cadatro_txt_email">Email:</string>
    <string name="cadatro_txt_senha">Senha:</string>
    <string name="cadastro_txt_title_usuario">Cadastro de usuário</string>
    <string name="cadastro_btn_cadastrar">Cadastrar</string>
    <string name="cadastro_txt_title_motorista">Cadastro de veículo</string>
    <string name="cadastro_txt_escolha_motorista">Sou legal e posso dar carona!</string>
    <string name="cadastro_txt_escolha_passageiro">Preciso de uma carona!</string>
    <string name="cadastro_txt_fabricante">Fabricante:</string>
    <string name="cadastro_txt_modelo">Modelo:</string>
    <string name="cadastro_txt_cor">Cor do veículo:</string>
    <string name="cadastro_txt_placa">Placa:</string>
    <string name="cadastro_btn_cadastrar_veiculo">Cadastrar Veículo</string>
    <string name="app_logo_description">Logo App</string>
    <string name="cadastro_hint_nome">Arnold Schwarzenegger</string>
    <string name="cadastro_hint_nasc">01/01/1990</string>
    <string name="cadastro_hint_ingresso">1980</string>
    <string name="cadastro_hint_ra">43211234</string>
    <string name="cadastro_hint_email">isidro@lindo.com</string>
    <string name="cadastro_hint_senha">sENh4!</string>
    <string name="cadastro_hint_fabricante">Ford</string>
    <string name="cadastro_hint_modelo">Ka</string>
    <string name="cadastro_hint_cor">Laranja</string>
    <string name="cadastro_hint_placa">ABC0123</string>
    <string name="motorista_btn_pode">Estou chegando na estação! Posso dar carona!</string>
    <string name="motorista_txt_quantidade">Passageiros esperando:</string>
    <string name="motorista_btn_chegou">Cheguei!</string>
    <string name="motorista_txt_localizacao">Terminal Santo André</string>
    <string name="passageiro_botao_chamar">Estou na estação de Santo André e preciso de carona, socorro!</string>
    <string name="passageiro_txt_localizacao">Terminal Santo André</string>
    <string name="passageiro_txt_quantidade">Motoristas a caminho:</string>
    <string name="passageiro_btn_chegou">Chegou!</string>

</resources>
