<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#66BB6A"
    tools:context="br.edu.ufabc.android.caronas.MainActivity" >


    <EditText
        android:id="@+id/login_field_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_simbolo_app"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:padding="5dip"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext_rounded"
        android:hint="@string/login_txt_email" />

    <Button
        android:id="@+id/login_btn_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_btn_login"
        android:layout_below="@+id/login_btn_login"
        android:layout_marginTop="17dp"
        android:minWidth="180dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/login_btn_cadastro"
        android:textColor="#FFFFFF"
        android:onClick="onClickCadastrar" />

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_field_senha"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:minWidth="180dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/login_btn_login"
        android:textColor="#FFFFFF"
        android:onClick="onClickLogin" />

    <ImageView
        android:id="@+id/login_simbolo_app"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-70dp"
        android:contentDescription="@string/app_logo_description"
        android:src="@drawable/simbolo_app_title_large" />

    <EditText
        android:id="@+id/login_field_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_field_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:background="@drawable/edittext_rounded"
        android:ems="10"
        android:hint="@string/login_txt_senha"
        android:inputType="textPassword"
        android:padding="5dip" />

</RelativeLayout>