<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66BB6A"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/passageiro_head"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:background="#2E7D32"
        android:orientation="vertical"
        android:gravity="center" >
       
       <TextView
           android:id="@+id/textView1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:text="@string/passageiro_txt_localizacao"
           android:textAppearance="?android:attr/textAppearanceLarge"
           android:textColor="#FFFCCC"
           android:textSize="22sp" />
       
       </LinearLayout>
       
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="#2E7D32"
        android:gravity="center"
        
        >
	    
	    <TextView
	        android:id="@+id/passageiro_txt_quantidade_titulo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/passageiro_txt_quantidade"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textColor="#FFFFFF"
	        android:textSize="24sp" />
        
        <TextView
            android:id="@+id/passageiro_txt_quantidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passageiro_body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical" >
        
        <ListView
            android:id="@+id/passageiro_lista_motoristas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:orientation="vertical"
        android:gravity="center"
        >

        <Button
            android:id="@+id/passageiro_btn_chegou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="200dp"
            android:minHeight="60dp"
            android:background="@drawable/btn_rounded"
            android:text="@string/passageiro_btn_chegou"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:onClick="onClickChegou" />
        
    </LinearLayout>

</LinearLayout>
